# xiao-nrf85240-embassy-template

./: Cargo.toml  LICENSE  flash.sh  readme.md
.cargo/: config.toml
src/: main.rs  usb_dfu.rs
